antsurance/force-app/main/default/objects/Claude_Work__c/Claude_Work__c.object-meta.xml
<CustomObject>
    <description>One piece of work Claude prepared on its own for Claude's desk on Home: a claim brief, an underwriting memo, a renewal note, a reserve review or a quote follow-up. It holds the work, the record it is for, and what a person decided about it, so it is also the log of what Claude did. Only the newest 25 are kept.</description>
    <label>Claude Work Item</label>
    <nameField>
        <displayFormat>CW-{0000}</displayFormat>
        <label>Work Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claude Work Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>