antsurance/force-app/main/default/objects/Claude_Work__c/fields/Authority__c.field-meta.xml
<CustomField>
    <fullName>Authority__c</fullName>
    <description>The setting in force when this was prepared: auto (Claude did it and reports) or approve (prepared for a person).</description>
    <label>Authority</label>
    <length>10</length>
    <type>Text</type>
</CustomField>