antsurance/force-app/main/default/objects/Claude_Work__c/fields/Decided_At__c.field-meta.xml
<CustomField>
    <fullName>Decided_At__c</fullName>
    <description>When it was approved or dismissed.</description>
    <label>Decided</label>
    <type>DateTime</type>
</CustomField>