antsurance/force-app/main/default/objects/Claude_Work__c/fields/Decided_By__c.field-meta.xml
<CustomField>
    <fullName>Decided_By__c</fullName>
    <description>Who approved or dismissed this.</description>
    <label>Decided By</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>User</referenceTo>
    <relationshipName>Claude_Work_Decided</relationshipName>
    <type>Lookup</type>
</CustomField>