antsurance/force-app/main/default/objects/Claude_Work__c/fields/Decision_Note__c.field-meta.xml
<CustomField>
    <fullName>Decision_Note__c</fullName>
    <description>What happened on approval, or why it was dismissed.</description>
    <label>Decision Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>