antsurance/force-app/main/default/objects/Claude_Work__c/fields/Importance__c.field-meta.xml
<CustomField>
    <fullName>Importance__c</fullName>
    <description>Orders the desk: the higher, the nearer the top.</description>
    <label>Importance</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>