antsurance/force-app/main/default/objects/Claude_Work__c/fields/Kind__c.field-meta.xml
<CustomField>
    <fullName>Kind__c</fullName>
    <description>What kind of work this is.</description>
    <label>Kind</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Claim brief</fullName>
            </value>
            <value>
                <fullName>Underwriting memo</fullName>
            </value>
            <value>
                <fullName>Renewal outreach</fullName>
            </value>
            <value>
                <fullName>Reserve review</fullName>
            </value>
            <value>
                <fullName>Quote follow-up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>