antsurance/force-app/main/default/objects/Claude_Work__c/fields/Prepared_At__c.field-meta.xml
<CustomField>
    <fullName>Prepared_At__c</fullName>
    <description>When Claude prepared this.</description>
    <label>Prepared</label>
    <type>DateTime</type>
</CustomField>