antsurance/force-app/main/default/objects/Claude_Work__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Why Claude thought this was needed.</description>
    <label>Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>