antsurance/force-app/main/default/objects/Claude_Work__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>The record this work is for.</description>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>