antsurance/force-app/main/default/objects/Claude_Work__c/fields/Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Name__c</fullName>
    <description>What the record is called, as the desk shows it.</description>
    <label>Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>