antsurance/force-app/main/default/objects/Claude_Work__c/fields/Record_Object__c.field-meta.xml
<CustomField>
    <fullName>Record_Object__c</fullName>
    <description>API name of the object the record is, so the desk can link to it.</description>
    <label>Record Object</label>
    <length>40</length>
    <type>Text</type>
</CustomField>