antsurance/force-app/main/default/objects/Claude_Work__c/fields/Record_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Record_Stamp__c</fullName>
    <description>When the record was last changed at the moment this was prepared, so the desk can tell when it has changed since.</description>
    <label>Record As Of</label>
    <type>DateTime</type>
</CustomField>