antsurance/force-app/main/default/objects/Claude_Work__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Waiting for a person, done by Claude under its own authority, approved, dismissed, replaced by a newer piece for the same record, or not prepared because Claude could not be reached in time (the reason is in Reason, and the desk offers to try again).</description>
    <label>Status</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting</fullName>
            </value>
            <value>
                <fullName>Done by Claude</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Dismissed</fullName>
            </value>
            <value>
                <fullName>Could not be prepared</fullName>
            </value>
            <value>
                <fullName>Replaced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>