antsurance/force-app/main/default/objects/Claude_Work__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>What Claude did, in a line.</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>