antsurance/force-app/main/default/objects/Claude_Work__c/fields/Work__c.field-meta.xml
<CustomField>
    <fullName>Work__c</fullName>
    <description>The work itself, as JSON the desk renders: the brief, the memo, the email, the reserve change or the follow-up.</description>
    <label>Work</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>